[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Tower.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/FPSCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/Mob.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Site.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 102, 25, 0, 0, 0, 0, 738, 28 )
}

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 1122, 393, 1082, 589, 890, 401, 802, 225, 550, 590, 714, 409, 514, 377, 402, 89, 1210, 89 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 2, 1, 4, 5 ), PoolIntArray( 5, 4, 6, 3 ), PoolIntArray( 3, 6, 7 ), PoolIntArray( 3, 7, 8 ), PoolIntArray( 3, 8, 0 ) ]
outlines = [ PoolVector2Array( 402, 89, 514, 377, 550, 590, 1082, 589, 1122, 393, 1210, 89 ), PoolVector2Array( 890, 401, 714, 409, 802, 225 ) ]

[node name="Main" type="Node"]
script = ExtResource( 3 )
mob_scene = ExtResource( 4 )
tower_scene = ExtResource( 1 )

[node name="MobSpawnPath" type="Path2D" parent="."]
position = Vector2( 107, 3 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobSpawnPath"]
position = Vector2( 102, 25 )
rotation = 0.00471683

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="FPSCounter" parent="." instance=ExtResource( 2 )]
margin_left = 13.0
margin_top = 8.0
margin_right = 13.0
margin_bottom = 22.0

[node name="TowerSpawnPoint" type="Position2D" parent="."]
position = Vector2( 511, 276 )

[node name="TargetPoint" type="Position2D" parent="."]
position = Vector2( 511, 452 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigableArea" type="NavigationPolygonInstance" parent="Navigation2D"]
position = Vector2( -288, -88 )
navpoly = SubResource( 2 )

[node name="Site" parent="." instance=ExtResource( 5 )]
position = Vector2( 512, 456 )

[node name="Site2" parent="." instance=ExtResource( 5 )]
position = Vector2( 344, 320 )

[node name="Site3" parent="." instance=ExtResource( 5 )]
position = Vector2( 712, 312 )

[node name="Site4" parent="." instance=ExtResource( 5 )]
position = Vector2( 520, 216 )

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
